WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52111
[Qt] [WK2] MiniBrowser does not load pages opened in new windows
https://bugs.webkit.org/show_bug.cgi?id=52111
Summary
[Qt] [WK2] MiniBrowser does not load pages opened in new windows
Benjamin Poulain
Reported
2011-01-08 11:14:59 PST
Created
attachment 78321
[details]
test case When opening a page in new window with WebKit 2, the target page is never loaded. The attached test case illustrate 3 cases not working with Minibrowser.
Attachments
test case
(404 bytes, text/html)
2011-01-08 11:14 PST
,
Benjamin Poulain
no flags
Details
Proposed patch
(4.46 KB, patch)
2011-01-10 07:06 PST
,
Andreas Kling
hausmann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2011-01-10 06:58:14 PST
This is a bug in MiniBrowser, patch coming.
Andreas Kling
Comment 2
2011-01-10 07:06:31 PST
Created
attachment 78397
[details]
Proposed patch
Andreas Kling
Comment 3
2011-01-10 07:07:46 PST
Comment on
attachment 78397
[details]
Proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=78397&action=review
> Tools/MiniBrowser/qt/BrowserView.h:40 > + BrowserView(QGraphicsWKView::BackingStoreType, QWKContext* context, QWidget* parent = 0);
Dammit Kling, the "context" argument name isn't necessary here.
WebKit Review Bot
Comment 4
2011-01-10 07:09:40 PST
Attachment 78397
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Tools/ChangeLog', u'Tools/MiniBrowser/qt/BrowserView.cpp', u'Tools/MiniBrowser/qt/BrowserView.h', u'Tools/MiniBrowser/qt/BrowserWindow.cpp', u'Tools/MiniBrowser/qt/BrowserWindow.h', u'WebKit2/ChangeLog', u'WebKit2/UIProcess/API/qt/qwkpage.cpp']" exit_code: 1 Tools/MiniBrowser/qt/BrowserView.h:40: The parameter name "context" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 5
2011-01-10 07:26:40 PST
Committed
r75373
: <
http://trac.webkit.org/changeset/75373
>
Benjamin Poulain
Comment 6
2011-01-10 11:22:14 PST
Wow, and
https://bugs.webkit.org/show_bug.cgi?id=41441
fixes the last case so I have nothing left to do. Amazing job Andreas, thanks for the help.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug