2011-01-10  Andreas Kling  <kling@webkit.org>

Reviewed by Simon Hausmann.

        [Qt] [WK2] MiniBrowser does not load pages opened in new windows
        https://bugs.webkit.org/show_bug.cgi?id=52111

        When getting a createNewPage() callback from QWKPage, create the
        new page with the same QWKContext as the page that is passed to
        the callback.

        * MiniBrowser/qt/BrowserView.h:
        * MiniBrowser/qt/BrowserWindow.cpp:
        (newPageFunction):
        (BrowserWindow::BrowserWindow):
        * MiniBrowser/qt/BrowserWindow.h:
2011-01-10  Andreas Kling  <kling@webkit.org>

        Reviewed by Simon Hausmann.

        [Qt] [WK2] MiniBrowser does not load pages opened in new windows
        https://bugs.webkit.org/show_bug.cgi?id=52111

        * UIProcess/API/qt/qwkpage.cpp:
        (QWKPage::context): Implement this method.


Canonical link: https://commits.webkit.org/65687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75373 268f45cc-cd09-0410-ab3c-d52691b4dbfc