Tools/MiniBrowser/qt/BrowserView.cpp
@@ -30,10 +30,10 @@
 
 #include <QGraphicsScene>
 
-BrowserView::BrowserView(QGraphicsWKView::BackingStoreType backingStoreType, QWidget* parent)
+BrowserView::BrowserView(QGraphicsWKView::BackingStoreType backingStoreType, QWKContext* context, QWidget* parent)
     : QGraphicsView(parent)
     , m_item(0)
-    , m_context(new QWKContext(this))
+    , m_context(context ? context : new QWKContext(this))
 {
     m_item = new QGraphicsWKView(m_context, backingStoreType, 0);
     setScene(new QGraphicsScene(this));
